--- a/RomRepoMgr/RomRepoMgr.csproj
+++ b/RomRepoMgr/RomRepoMgr.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <OutputType>WinExe</OutputType>
-        <TargetFramework>netcoreapp3.0</TargetFramework>
+        <TargetFramework>netcoreapp3.1</TargetFramework>
     </PropertyGroup>
     <ItemGroup>
         <Folder Include="Models\" />
@@ -18,5 +18,8 @@
         <PackageReference Include="Avalonia.Desktop" Version="0.10.0-preview3" />
         <PackageReference Include="Avalonia.ReactiveUI" Version="0.10.0-preview3" />
         <PackageReference Include="Svg.Skia.Avalonia" Version="0.10.0-preview3" />
+    </ItemGroup>
+    <ItemGroup>
+      <ProjectReference Include="..\RomRepoMgr.Settings\RomRepoMgr.Settings.csproj" />
     </ItemGroup>
 </Project>
