--- a/RomRepoMgr/RomRepoMgr.csproj
+++ b/RomRepoMgr/RomRepoMgr.csproj
@@ -15,6 +15,7 @@
     </ItemGroup>
     <ItemGroup>
         <PackageReference Include="Avalonia" Version="0.10.0-preview3" />
+        <PackageReference Include="Avalonia.Controls.DataGrid" Version="0.10.0-preview3" />
         <PackageReference Include="Avalonia.Desktop" Version="0.10.0-preview3" />
         <PackageReference Include="Avalonia.ReactiveUI" Version="0.10.0-preview3" />
         <PackageReference Include="Svg.Skia.Avalonia" Version="0.10.0-preview3" />
