--- a/RomRepoMgr/RomRepoMgr.csproj
+++ b/RomRepoMgr/RomRepoMgr.csproj
@@ -18,6 +18,7 @@
         <PackageReference Include="Avalonia.Desktop" Version="0.10.0-preview3" />
         <PackageReference Include="Avalonia.Diagnostics" Version="0.10.0-preview3" />
         <PackageReference Include="Avalonia.ReactiveUI" Version="0.10.0-preview3" />
+        <PackageReference Include="MessageBox.Avalonia" Version="0.10.0-prev2" />
         <PackageReference Include="Svg.Skia.Avalonia" Version="0.10.0-preview3" />
     </ItemGroup>
     <ItemGroup>
