--- a/RomRepoMgr.Database/RomRepoMgr.Database.csproj
+++ b/RomRepoMgr.Database/RomRepoMgr.Database.csproj
@@ -12,6 +12,7 @@
       <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="3.1.7" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.7" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Design" Version="1.1.6" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="3.1.7" />
     </ItemGroup>
 
     <ItemGroup>
