--- a/RomRepoMgr.Core/RomRepoMgr.Core.csproj
+++ b/RomRepoMgr.Core/RomRepoMgr.Core.csproj
@@ -5,6 +5,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="DotNetZip" Version="1.13.8" />
       <PackageReference Include="SharpCompress" Version="0.26.0" />
       <PackageReference Include="System.Security.Principal.Windows" Version="4.7.0" />
     </ItemGroup>
