--- a/RomRepoMgr.Settings/RomRepoMgr.Settings.csproj
+++ b/RomRepoMgr.Settings/RomRepoMgr.Settings.csproj
@@ -9,4 +9,19 @@
       <PackageReference Include="plist-cil" Version="2.1.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <EmbeddedResource Update="Resources\Localization.resx">
+        <Generator>ResXFileCodeGenerator</Generator>
+        <LastGenOutput>Localization.Designer.cs</LastGenOutput>
+      </EmbeddedResource>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Compile Update="Resources\Localization.Designer.cs">
+        <DesignTime>True</DesignTime>
+        <AutoGen>True</AutoGen>
+        <DependentUpon>Localization.resx</DependentUpon>
+      </Compile>
+    </ItemGroup>
+
 </Project>
