--- a/RomRepoMgr.Core/RomRepoMgr.Core.csproj
+++ b/RomRepoMgr.Core/RomRepoMgr.Core.csproj
@@ -16,6 +16,7 @@
       <ProjectReference Include="..\RomRepoMgr.Database\RomRepoMgr.Database.csproj" />
       <ProjectReference Include="..\RomRepoMgr.Settings\RomRepoMgr.Settings.csproj" />
       <ProjectReference Include="..\SabreTools\SabreTools.Library\SabreTools.Library.csproj" />
+      <ProjectReference Include="..\winfsp-netcore\winfsp-netcore.csproj" />
     </ItemGroup>
 
     <ItemGroup>
