--- a/RomRepoMgr/RomRepoMgr.csproj
+++ b/RomRepoMgr/RomRepoMgr.csproj
@@ -31,6 +31,9 @@
       <ProjectReference Include="..\RomRepoMgr.Database\RomRepoMgr.Database.csproj" />
       <ProjectReference Include="..\RomRepoMgr.Settings\RomRepoMgr.Settings.csproj" />
       <ProjectReference Include="..\RomRepoMgr.Core\RomRepoMgr.Core.csproj" />
+      <ProjectReference Include="..\SabreTools\SabreTools.DatFiles\SabreTools.DatFiles.csproj" />
+      <ProjectReference Include="..\SabreTools\SabreTools.DatItems\SabreTools.DatItems.csproj" />
+      <ProjectReference Include="..\SabreTools\SabreTools.IO\SabreTools.IO.csproj" />
     </ItemGroup>
     <ItemGroup>
       <EmbeddedResource Update="Resources\Localization.resx">
