--- a/RomRepoMgr/RomRepoMgr.csproj
+++ b/RomRepoMgr/RomRepoMgr.csproj
@@ -19,13 +19,14 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Avalonia" Version="0.10.0-rc1"/>
-    <PackageReference Include="Avalonia.Controls.DataGrid" Version="0.10.0-rc1"/>
-    <PackageReference Include="Avalonia.Desktop" Version="0.10.0-rc1"/>
-    <PackageReference Include="Avalonia.Diagnostics" Version="0.10.0-rc1"/>
-    <PackageReference Include="Avalonia.ReactiveUI" Version="0.10.0-rc1"/>
+    <PackageReference Include="Avalonia" Version="11.2.0"/>
+    <PackageReference Include="Avalonia.Controls.DataGrid" Version="11.2.0"/>
+    <PackageReference Include="Avalonia.Desktop" Version="11.2.0"/>
+    <PackageReference Include="Avalonia.Diagnostics" Version="11.2.0"/>
+    <PackageReference Include="Avalonia.ReactiveUI" Version="11.2.0"/>
+    <PackageReference Include="Avalonia.Svg.Skia" Version="11.2.0"/>
+    <PackageReference Include="Avalonia.Themes.Fluent" Version="11.2.0"/>
     <PackageReference Include="MessageBox.Avalonia" Version="0.10.7-rc1"/>
-    <PackageReference Include="Svg.Skia.Avalonia" Version="0.10.0-preview7"/>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\RomRepoMgr.Database\RomRepoMgr.Database.csproj"/>
