--- a/RomRepoMgr/RomRepoMgr.csproj
+++ b/RomRepoMgr/RomRepoMgr.csproj
@@ -26,7 +26,7 @@
     <PackageReference Include="Avalonia.ReactiveUI" Version="11.2.0"/>
     <PackageReference Include="Avalonia.Svg.Skia" Version="11.2.0"/>
     <PackageReference Include="Avalonia.Themes.Fluent" Version="11.2.0"/>
-    <PackageReference Include="MessageBox.Avalonia" Version="0.10.7-rc1"/>
+    <PackageReference Include="MessageBox.Avalonia" Version="3.2.0"/>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\RomRepoMgr.Database\RomRepoMgr.Database.csproj"/>
