--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -18,7 +18,7 @@
     <PackageVersion Include="Microsoft.EntityFrameworkCore.Proxies" Version="9.0.6"/>
     <PackageVersion Include="Microsoft.EntityFrameworkCore.Sqlite.Design" Version="2.0.0-preview1-final"/>
     <PackageVersion Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.6"/>
-    <PackageVersion Include="Microsoft.Extensions.Logging.Console" Version="9.0.0-rc.2.24473.5"/>
+    <PackageVersion Include="Microsoft.Extensions.Logging.Console" Version="9.0.6"/>
     <PackageVersion Include="Microsoft.VisualStudio.Threading.Analyzers" Version="17.10.48"/>
     <PackageVersion Include="Microsoft.Win32.Registry" Version="5.0.0"/>
     <PackageVersion Include="Mono.Fuse.NETStandard" Version="1.1.0"/>
