[Dependencies] Add SkiaSharp.NativeAssets.Linux package version 3.116.1 for Linux support due to upstream bug.

--- a/RomRepoMgr/RomRepoMgr.csproj
+++ b/RomRepoMgr/RomRepoMgr.csproj
@@ -33,6 +33,7 @@
     <PackageReference Include="Roslynator.Analyzers"/>
     <PackageReference Include="Roslynator.CodeAnalysis.Analyzers"/>
     <PackageReference Include="Roslynator.Formatting.Analyzers"/>
+    <PackageReference Include="SkiaSharp.NativeAssets.Linux" />
     <PackageReference Include="SmartAnalyzers.MultithreadingAnalyzer"/>
     <PackageReference Include="Text.Analyzers"/>
   </ItemGroup>
