--- a/RomRepoMgr/RomRepoMgr.csproj
+++ b/RomRepoMgr/RomRepoMgr.csproj
@@ -6,15 +6,13 @@
     <Compile Update="**\*.xaml.cs">
       <DependentUpon>%(Filename)</DependentUpon>
     </Compile>
+    <None Remove="**\*.xaml"/>
     <AvaloniaResource Include="**\*.xaml">
       <SubType>Designer</SubType>
     </AvaloniaResource>
+  </ItemGroup>
+  <ItemGroup>
     <AvaloniaResource Include="Assets\**"/>
-    <Compile Update="Resources\Localization.Designer.cs">
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Localization.resx</DependentUpon>
-    </Compile>
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Avalonia"/>
@@ -33,7 +31,7 @@
     <PackageReference Include="Roslynator.Analyzers"/>
     <PackageReference Include="Roslynator.CodeAnalysis.Analyzers"/>
     <PackageReference Include="Roslynator.Formatting.Analyzers"/>
-    <PackageReference Include="SkiaSharp.NativeAssets.Linux" />
+    <PackageReference Include="SkiaSharp.NativeAssets.Linux"/>
     <PackageReference Include="SmartAnalyzers.MultithreadingAnalyzer"/>
     <PackageReference Include="Text.Analyzers"/>
   </ItemGroup>
@@ -44,7 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Update="Resources\Localization.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
+      <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Localization.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
