--- a/.editorconfig
+++ b/.editorconfig
@@ -311,6 +311,7 @@ resharper_bad_switch_braces_indent_highlighting                                 
 resharper_bad_symbol_spaces_highlighting                                                          = warning
 resharper_built_in_type_reference_style_for_member_access_highlighting                            = hint
 resharper_built_in_type_reference_style_highlighting                                              = hint
+resharper_can_simplify_dictionary_lookup_with_try_add_highlighting                                = warning
 resharper_check_for_reference_equality_instead_1_highlighting                                     = warning
 resharper_check_for_reference_equality_instead_2_highlighting                                     = warning
 resharper_check_for_reference_equality_instead_3_highlighting                                     = warning
