--- a/RomRepoMgr/RomRepoMgr.csproj
+++ b/RomRepoMgr/RomRepoMgr.csproj
@@ -19,9 +19,9 @@
     <PackageReference Include="Avalonia.Controls.DataGrid"/>
     <PackageReference Include="Avalonia.Desktop"/>
     <PackageReference Include="Avalonia.Diagnostics"/>
-    <PackageReference Include="Avalonia.ReactiveUI"/>
     <PackageReference Include="Avalonia.Svg.Skia"/>
     <PackageReference Include="Avalonia.Themes.Fluent"/>
+    <PackageReference Include="CommunityToolkit.Mvvm"/>
     <PackageReference Include="MessageBox.Avalonia"/>
     <PackageReference Include="AsyncFixer"/>
     <PackageReference Include="ErrorProne.NET.CoreAnalyzers"/>
