Added Serilog for logging.

--- a/RomRepoMgr/RomRepoMgr.csproj
+++ b/RomRepoMgr/RomRepoMgr.csproj
@@ -31,6 +31,9 @@
     <PackageReference Include="Roslynator.Analyzers"/>
     <PackageReference Include="Roslynator.CodeAnalysis.Analyzers"/>
     <PackageReference Include="Roslynator.Formatting.Analyzers"/>
+    <PackageReference Include="Serilog"/>
+    <PackageReference Include="Serilog.Extensions.Logging"/>
+    <PackageReference Include="Serilog.Sinks.Console"/>
     <PackageReference Include="SmartAnalyzers.MultithreadingAnalyzer"/>
     <PackageReference Include="Text.Analyzers"/>
   </ItemGroup>
