--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -1,52 +1,53 @@
 <Project ToolsVersion="15.0">
   <ItemGroup>
-    <PackageVersion Include="Aaru.Checksums.Native" Version="6.0.0-alpha.10"/>
-    <PackageVersion Include="AsyncFixer" Version="1.6.0"/>
-    <PackageVersion Include="Avalonia.Controls.DataGrid" Version="11.3.2"/>
-    <PackageVersion Include="Avalonia.Desktop" Version="11.3.2"/>
-    <PackageVersion Include="Avalonia.Diagnostics" Version="11.3.2"/>
-    <PackageVersion Include="Avalonia.Svg.Skia" Version="11.3.0"/>
-    <PackageVersion Include="Avalonia.Themes.Fluent" Version="11.3.2"/>
-    <PackageVersion Include="Avalonia" Version="11.3.2"/>
-    <PackageVersion Include="CommunityToolkit.Mvvm" Version="8.4.0"/>
-    <PackageVersion Include="DotNetZip" Version="1.16.0"/>
-    <PackageVersion Include="EFCore.BulkExtensions" Version="9.0.1"/>
-    <PackageVersion Include="ErrorProne.NET.CoreAnalyzers" Version="0.1.2"/>
-    <PackageVersion Include="ErrorProne.NET.Structs" Version="0.1.2"/>
-    <PackageVersion Include="InclusivenessAnalyzer" Version="1.3.0"/>
-    <PackageVersion Include="MessageBox.Avalonia" Version="3.2.0"/>
-    <PackageVersion Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.6"/>
-    <PackageVersion Include="Microsoft.EntityFrameworkCore.Proxies" Version="9.0.6"/>
-    <PackageVersion Include="Microsoft.EntityFrameworkCore.Sqlite.Design" Version="2.0.0-preview1-final"/>
-    <PackageVersion Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.6"/>
-    <PackageVersion Include="Microsoft.Extensions.Logging.Console" Version="9.0.6"/>
-    <PackageVersion Include="Microsoft.VisualStudio.Threading.Analyzers" Version="17.14.15"/>
-    <PackageVersion Include="Microsoft.Win32.Registry" Version="5.0.0"/>
-    <PackageVersion Include="Mono.Fuse.NETStandard" Version="1.1.0"/>
-    <PackageVersion Include="Philips.CodeAnalysis.MaintainabilityAnalyzers" Version="1.6.3"/>
-    <PackageVersion Include="plist-cil" Version="2.2.0"/>
-    <PackageVersion Include="Roslynator.Analyzers" Version="4.13.1"/>
-    <PackageVersion Include="Roslynator.CodeAnalysis.Analyzers" Version="4.13.1"/>
-    <PackageVersion Include="Roslynator.Formatting.Analyzers" Version="4.13.1"/>
-    <PackageVersion Include="SabreTools.Models" Version="1.5.8"/>
-    <PackageVersion Include="Serilog" Version="4.3.0"/>
-    <PackageVersion Include="Serilog.Extensions.Logging" Version="9.0.2"/>
-    <PackageVersion Include="Serilog.Sinks.Console" Version="6.0.0"/>
-    <PackageVersion Include="SharpCompress" Version="0.39.0"/>
-    <PackageVersion Include="SmartAnalyzers.MultithreadingAnalyzer" Version="1.1.31"/>
-    <PackageVersion Include="System.Security.Principal.Windows" Version="5.0.0"/>
-    <PackageVersion Include="Text.Analyzers" Version="4.14.0"/>
-    <PackageVersion Include="winfsp.net" Version="2.1.25156"/>
-    <PackageVersion Include="Newtonsoft.Json" Version="13.0.3"/>
-    <PackageVersion Include="SabreTools.Hashing" Version="1.2.3"/>
-    <PackageVersion Include="SabreTools.IO" Version="1.4.13"/>
-    <PackageVersion Include="SabreTools.Matching" Version="1.3.4"/>
-    <PackageVersion Include="SabreTools.Skippers" Version="1.1.3"/>
-    <PackageVersion Include="System.IO.Compression" Version="4.3.0"/>
-    <PackageVersion Include="SharpCompress" Version="0.38.0"/>
-    <PackageVersion Include="System.Text.Encoding.CodePages" Version="8.0.0"/>
-    <PackageVersion Include="ZstdSharp.Port" Version="0.8.6"/>
-    <PackageVersion Include="Microsoft.FluentUI.AspNetCore.Components" Version="4.11.9"/>
-    <PackageVersion Include="Microsoft.FluentUI.AspNetCore.Components.Icons" Version="4.11.9"/>
+    <PackageVersion Include="Aaru.Checksums.Native" Version="6.0.0-alpha.10" />
+    <PackageVersion Include="AsyncFixer" Version="1.6.0" />
+    <PackageVersion Include="Avalonia.Controls.DataGrid" Version="11.3.2" />
+    <PackageVersion Include="Avalonia.Desktop" Version="11.3.2" />
+    <PackageVersion Include="Avalonia.Diagnostics" Version="11.3.2" />
+    <PackageVersion Include="Avalonia.Svg.Skia" Version="11.3.0" />
+    <PackageVersion Include="Avalonia.Themes.Fluent" Version="11.3.2" />
+    <PackageVersion Include="Avalonia" Version="11.3.2" />
+    <PackageVersion Include="CommunityToolkit.Mvvm" Version="8.4.0" />
+    <PackageVersion Include="DotNetZip" Version="1.16.0" />
+    <PackageVersion Include="EFCore.BulkExtensions" Version="9.0.1" />
+    <PackageVersion Include="ErrorProne.NET.CoreAnalyzers" Version="0.1.2" />
+    <PackageVersion Include="ErrorProne.NET.Structs" Version="0.1.2" />
+    <PackageVersion Include="InclusivenessAnalyzer" Version="1.3.0" />
+    <PackageVersion Include="MessageBox.Avalonia" Version="3.2.0" />
+    <PackageVersion Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.6" />
+    <PackageVersion Include="Microsoft.EntityFrameworkCore.Proxies" Version="9.0.6" />
+    <PackageVersion Include="Microsoft.EntityFrameworkCore.Sqlite.Design" Version="2.0.0-preview1-final" />
+    <PackageVersion Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.6" />
+    <PackageVersion Include="Microsoft.Extensions.Logging.Console" Version="9.0.6" />
+    <PackageVersion Include="Microsoft.VisualStudio.Threading.Analyzers" Version="17.14.15" />
+    <PackageVersion Include="Microsoft.Win32.Registry" Version="5.0.0" />
+    <PackageVersion Include="Mono.Fuse.NETStandard" Version="1.1.0" />
+    <PackageVersion Include="Philips.CodeAnalysis.MaintainabilityAnalyzers" Version="1.6.3" />
+    <PackageVersion Include="plist-cil" Version="2.2.0" />
+    <PackageVersion Include="Roslynator.Analyzers" Version="4.13.1" />
+    <PackageVersion Include="Roslynator.CodeAnalysis.Analyzers" Version="4.13.1" />
+    <PackageVersion Include="Roslynator.Formatting.Analyzers" Version="4.13.1" />
+    <PackageVersion Include="SabreTools.Models" Version="1.5.8" />
+    <PackageVersion Include="Serilog" Version="4.3.0" />
+    <PackageVersion Include="Serilog.AspNetCore" Version="9.0.0" />
+    <PackageVersion Include="Serilog.Extensions.Logging" Version="9.0.2" />
+    <PackageVersion Include="Serilog.Sinks.Console" Version="6.0.0" />
+    <PackageVersion Include="SharpCompress" Version="0.39.0" />
+    <PackageVersion Include="SmartAnalyzers.MultithreadingAnalyzer" Version="1.1.31" />
+    <PackageVersion Include="System.Security.Principal.Windows" Version="5.0.0" />
+    <PackageVersion Include="Text.Analyzers" Version="4.14.0" />
+    <PackageVersion Include="winfsp.net" Version="2.1.25156" />
+    <PackageVersion Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageVersion Include="SabreTools.Hashing" Version="1.2.3" />
+    <PackageVersion Include="SabreTools.IO" Version="1.4.13" />
+    <PackageVersion Include="SabreTools.Matching" Version="1.3.4" />
+    <PackageVersion Include="SabreTools.Skippers" Version="1.1.3" />
+    <PackageVersion Include="System.IO.Compression" Version="4.3.0" />
+    <PackageVersion Include="SharpCompress" Version="0.38.0" />
+    <PackageVersion Include="System.Text.Encoding.CodePages" Version="8.0.0" />
+    <PackageVersion Include="ZstdSharp.Port" Version="0.8.6" />
+    <PackageVersion Include="Microsoft.FluentUI.AspNetCore.Components" Version="4.11.9" />
+    <PackageVersion Include="Microsoft.FluentUI.AspNetCore.Components.Icons" Version="4.11.9" />
   </ItemGroup>
 </Project>
