--- a/RomRepoMgr.Blazor/appsettings.Development.json
+++ b/RomRepoMgr.Blazor/appsettings.Development.json
@@ -1,8 +1,11 @@
 {
-  "Logging": {
+  "Logging":        {
     "LogLevel": {
-      "Default": "Information",
+      "Default":              "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "CircuitOptions": {
+    "DetailedErrors": true
   }
 }
