[Blazor] Implement home page.

--- a/RomRepoMgr.Blazor/RomRepoMgr.Blazor.csproj
+++ b/RomRepoMgr.Blazor/RomRepoMgr.Blazor.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite"/>
     <PackageReference Include="Microsoft.FluentUI.AspNetCore.Components"/>
+    <PackageReference Include="Microsoft.FluentUI.AspNetCore.Components.DataGrid.EntityFrameworkAdapter"/>
     <PackageReference Include="Microsoft.FluentUI.AspNetCore.Components.Icons"/>
     <PackageReference Include="Serilog"/>
     <PackageReference Include="Serilog.AspNetCore"/>
