[Blazor] Add localization.

--- a/RomRepoMgr.Blazor/appsettings.Development.json
+++ b/RomRepoMgr.Blazor/appsettings.Development.json
@@ -1,8 +1,10 @@
 {
   "Logging":        {
     "LogLevel": {
-      "Default":              "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Default":                           "Information",
+      "Microsoft.AspNetCore":              "Warning",
+      "Microsoft":                         "Debug",
+      "Microsoft.Extensions.Localization": "Debug"
     }
   },
   "CircuitOptions": {
