--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -19,6 +19,7 @@
     <PackageVersion Include="Microsoft.EntityFrameworkCore.Proxies" Version="9.0.6"/>
     <PackageVersion Include="Microsoft.EntityFrameworkCore.Sqlite.Design" Version="2.0.0-preview1-final"/>
     <PackageVersion Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.6"/>
+    <PackageVersion Include="Microsoft.Extensions.Localization" Version="9.0.6"/>
     <PackageVersion Include="Microsoft.Extensions.Logging.Console" Version="9.0.6"/>
     <PackageVersion Include="Microsoft.FluentUI.AspNetCore.Components.DataGrid.EntityFrameworkAdapter" Version="4.12.1"/>
     <PackageVersion Include="Microsoft.VisualStudio.Threading.Analyzers" Version="17.14.15"/>
