[Blazor] Use settings from appsettings.json to configure folders and log levels.

--- a/RomRepoMgr.Blazor/appsettings.json
+++ b/RomRepoMgr.Blazor/appsettings.json
@@ -1,9 +1,20 @@
 {
-  "Logging":      {
+  "Logging":         {
     "LogLevel": {
       "Default":              "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "LogFile":         "logs/romrepomgr.log",
+  "AllowedHosts":    "*",
+  "DataFolders":     {
+    "Repository": "repo",
+    "ImportRoms": "incoming",
+    "ImportDats": "incoming-dats",
+    "ExportRoms": "export",
+    "ExportDats": "export-dats",
+    "Database":   "db",
+    "Temporary":  "tmp"
+  },
+  "CompressionType": "Zstd"
 }
