--- a/RomRepoMgr.Blazor/RomRepoMgr.Blazor.csproj
+++ b/RomRepoMgr.Blazor/RomRepoMgr.Blazor.csproj
@@ -20,6 +20,7 @@
     <PackageReference Include="Serilog"/>
     <PackageReference Include="Serilog.AspNetCore"/>
     <PackageReference Include="Serilog.Sinks.Console"/>
+    <PackageReference Include="Serilog.Sinks.File"/>
   </ItemGroup>
 
   <ItemGroup>
